Made final adjustments to the style and layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <button class="button is-link m-1" id="submitSearch">Search</button>
 
                     <div id="history">
+                      <p class="has-text-link is-size-3 has-text-centered">Previous Searches:</p>
 
                     </div>
                   </div>
